--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-todo-list",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://seba-nigu.github.io",
   "dependencies": {
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.16.3",
@@ -18,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
