test 2 for github pages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-todo-list",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://seba-nigu.github.io",
+  "homepage": "https://seba-nigu.github.io/react-todo-list",
   "dependencies": {
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.16.3",
